# kench1994.github.io

./: Dockerfile  README.md  _config.yml  docker-compose.yml  index.html  init.sh  new-post.lua  serv-locally.sh
_posts/: 2020-08-08-usual-error-coding.md  2020-09-10-tcp-keepAlive-disconn-notify.md  2020-09-29-the-important-of-heartbeat.md  2020-09-30-compile-notes.md  2020-10-16-0MQ-not-support-IPC-on-windows.md  2020-10-16-2fa.md  2020-10-16-trade-dll-his.md  2020-10-16-why-uuid-unique.md  2020-10-16-zmq-connect-return-0.md  2020-10-16-zmq-req-rep-questions.md  2020-12-10-padding.md  2021-09-05-use-main-py.md  2021-10-27-ldd-command.md  2021-12-30-rpm-download-package.md  2022-02-11-git-undo.md  2022-02-19-compile-gcc.md  2022-04-09-git-reset-to-commit.md  2022-07-23-unittest.md  2022-07-31-cast-compare.md  2022-07-31-protobuf.md  2022-08-08-gracefully-shutdown-processes.md  2022-08-08-pass-signals-to-vscode-debugger.md  2022-08-09-pthread-sigmask.md  2022-08-11-systemd-service.md  2022-08-12-openssl-env-mean.md  2022-08-12-xmake-vscode-includedirs-search.md  2022-08-15-docker-timezone.md  2022-08-15-gcc-ignore-warming.md  2022-08-18-demaon-imple-way.md  2022-08-18-localtime-deadlock-while-fork.md  2022-08-19-linux-buffer-cache.md  2022-08-25-localhost.md  2022-08-27-codex.md  2022-08-27-tcp-4way-wavehand.md  2022-08-29-get-rpath.md  2022-08-29-get-source-code-path-from-elf.md  2022-08-30-get-source-code-path-from-elf.md  2022-08-31-shell-echo-quotes.md  (+89 more)
assets/archived/daemon_service/: CMakeLists.txt  invoker.cpp  main.cpp  proto.h  services.ini  worker.cpp
(+2 files in other folders)
